--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,17 @@
     padding-bottom: 70px;
 }
 
+.pageTitle {
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    font-family: "Montserrat", sans-serif;
+    font-size: 3vw;
+    font-weight: 800;
+    padding: 4px;
+    border-radius: 50px;
+}
+
 @media (max-width:700px) {
     .app {
         padding-top: 70px;
