--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+    scroll-behavior: smooth;
+}
+
 .App {
     min-height: 100vh;
     color: black;
@@ -9,7 +13,7 @@
     text-transform: uppercase;
     display: flex;
     justify-content: center;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat", "sans-serif";
     font-size: 3vw;
     font-weight: 800;
     padding: 4px;
@@ -19,5 +23,8 @@
 @media (max-width:768px) {
     .App {
         padding-top: 75px;
+    }
+    .pageTitle {
+        font-size: 6.4vw;
     }
 }
