--- a/src/components/SingleContent/SingleContent.css
+++ b/src/components/SingleContent/SingleContent.css
@@ -11,8 +11,8 @@
 }
 
 .media:hover {
-    background-color: #FBF3E4;
-    color: black;
+    background-color: #355C7D;
+    color: white;
 }
 
 .poster {
